# 3DUNDERWORLD-SLS-GPU_CPU

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  paper.bib  paper.md
.github/workflows/: c-cpp.yml
data/alexander/leftCam/calib/: Thumbs.db
data/alexander/leftCam/calib/output/: cam_matrix.txt  cam_trans_vectror.txt
data/alexander/rightCam/calib/: Thumbs.db
data/alexander/rightCam/calib/output/: calib.xml  cam_distortion.txt  cam_matrix.txt
data/alexander/rightCam/dataset1/: Thumbs.db
doc/: CMakeLists.txt  dox.cfg  doxygen.in  how-it-works.dia  setup.dia
doc/paper/: acmsmall-sample-bibfile.bib  elsarticle-template.tex  sample.bib  systemOverview.eps
doc/paper/images/: point_density.m  point_density_MATLAB.m
refCode/: CameraCalibration.cpp  CameraCalibration.h  CameraController.cpp  CameraController.h  CanonCamera.cpp  CanonCamera.h  GrayCodes.cpp  GrayCodes.h  MeshCreator.cpp  MeshCreator.h  PointCloudImage.cpp  PointCloudImage.h  Projector.cpp  Projector.h  RNG.h  Reconstructor.cpp  Reconstructor.h  SLS2012.cpp  SLS2012.h  SLS2012v3.2.vcxproj  SLS2012v3.2.vcxproj.filters  Sample.cpp  Sample.h  Scanner.cpp  Scanner.h  Utilities.cpp  Utilities.h  VirtualCamera.cpp  VirtualCamera.h  WebCam.cpp  WebCam.h  stdafx.cpp  stdafx.h  targetver.h
refCode/calibration/camera1/output/: calib.xml  cam_distortion.txt
refCode/calibration/camera2/output/: cam_rotation_matrix.txt
refCode/calibration/camera3/output/: calib.xml  cam_trans_vectror.txt
refCode/reconstruction/dataset/Cam1/input/: cam_rotation_matrix.txt
refCode/reconstruction/dataset/Cam2/input/: cam_trans_vectror.txt
refCode/reconstruction/dataset/Cam3/input/: cam_distortion.txt  cam_matrix.txt  cam_rotation_matrix.txt
scripts/: renamePhotos.sh
src/app/: App.cpp  App_CUDA.cu  App_Calib.cpp  App_Graycode.cpp  CMakeLists.txt  CalibrateCamera.cpp  calibrateCamera.cpp  generateGraycode.cpp
src/lib/GrayCode/: CMakeLists.txt  GrayCode.cpp  GrayCode.hpp
src/lib/ReconstructorCUDA/: CMakeLists.txt  CUDA_Error.cuh  DynamicBits.cu  Dynamic_bits.cu  Dynamic_bits.cuh  FileReaderCUDA.cu  FileReaderCUDA.cuh  ImageFileProcessorCUDA.cuh  ReconstructorCUDA.cu  ReconstructorCUDA.cuh  fileReaderCUDA.cu  fileReaderCUDA.cuh
src/lib/ReconstructorCUDA/test/: aa  kernel.cu  test  test.cu
src/lib/calibration/: CMakeLists.txt  Calibrator.cpp  Calibrator.hpp
src/lib/core/: CMakeLists.txt  Camera.cpp  Camera.h  DynamicBitset.cpp  DynamicBitset.h  Dynamic_Bitset.cpp  Dynamic_Bitset.h  Exporter.cpp  Exporter.hpp  FileReader.cpp  FileReader.h  ImageFileProcessor.cpp  ImageFileProcessor.h  ImageProcessor.cpp  ImageProcessor.h  Log.cpp  Log.hpp  PointCloud.cpp  PointCloud.hpp  Projector.h  Ray.h  Reconstructor.cpp  Reconstructor.h  ReconstructorCPU.cpp  ReconstructorCPU.h  exporter.cpp  exporter.hpp  fileReader.cpp  fileReader.h  log.cpp  log.hpp  tempApp.cpp
test/: App.cpp  CMakeLists.txt  RunTest.cpp  splitstring.cpp  splitstring.h  test.cpp
